feat(spindle-ui): change sizes to relative units

--- a/packages/spindle-ui/src/Form/Checkbox.css
+++ b/packages/spindle-ui/src/Form/Checkbox.css
@@ -4,7 +4,7 @@
 .spui-Checkbox-label {
   border-radius: 2px;
   color: var(--color-text-low-emphasis);
-  font-size: 13px;
+  font-size: 0.8125em;
   line-height: 1.4;
   padding: 0.1em 0.1em 0;
   position: relative;
