--- a/packages/spindle-ui/src/Form/TextField.css
+++ b/packages/spindle-ui/src/Form/TextField.css
@@ -7,7 +7,7 @@
   border-radius: 8px;
   box-sizing: border-box;
   color: var(--color-text-high-emphasis);
-  font-size: 16px;
+  font-size: 1em;
   margin: 0;
   min-height: 48px;
   outline: none;
