--- a/packages/spindle-ui/src/Button/Button.css
+++ b/packages/spindle-ui/src/Button/Button.css
@@ -43,7 +43,7 @@
 .spui-Button--large {
   /* To be relative value with font size; this means base height / base font size  */
   border-radius: calc(48em / 16);
-  font-size: 16px; /* TODO: Replace relative value (em or rem) */
+  font-size: 1em;
   min-height: 48px;
   padding-left: 16px;
   padding-right: 16px;
@@ -51,7 +51,7 @@
 
 .spui-Button--medium {
   border-radius: calc(40em / 14);
-  font-size: 14px; /* TODO: Replace relative value (em or rem) */
+  font-size: 0.875em;
   min-height: 40px;
   min-width: 88px;
   padding-left: 16px;
@@ -60,7 +60,7 @@
 
 .spui-Button--small {
   border-radius: calc(32em / 13);
-  font-size: 13px; /* TODO: Replace relative value (em or rem) */
+  font-size: 0.8125em;
   min-height: 32px;
   min-width: 60px;
   padding-left: 10px;
