--- a/packages/spindle-ui/src/Form/InputLabel.css
+++ b/packages/spindle-ui/src/Form/InputLabel.css
@@ -4,7 +4,7 @@
 .spui-InputLabel {
   color: var(--color-text-mid-emphasis);
   display: block;
-  font-size: 14px;
+  font-size: 0.875em;
   font-weight: bold;
   line-height: 1.4;
 }
