feat(spindle-ui): set line-height 1.3 in button

--- a/packages/spindle-ui/src/Button/Button.css
+++ b/packages/spindle-ui/src/Button/Button.css
@@ -6,6 +6,7 @@
 */
 .spui-Button {
   box-sizing: border-box;
+  line-height: 1.3;
   outline: none;
   text-align: center;
   transition: background-color var(--Button-transitionDuration, 0.3s);
