feat(spindle-ui): add IconButton component

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -2,4 +2,5 @@
 @import 'ameba-color-palette.css';
 @import './Button/Button.css';
 @import './Form/index.css';
+@import './IconButton/IconButton.css';
 @import './LinkButton/LinkButton.css';
