--- a/packages/spindle-ui/src/Form/Checkbox.css
+++ b/packages/spindle-ui/src/Form/Checkbox.css
@@ -2,11 +2,13 @@
  * Checkbox
 */
 .spui-Checkbox-label {
+  align-items: center;
   border-radius: 2px;
   color: var(--color-text-low-emphasis);
-  font-size: 0.8125em;
-  line-height: 1.4;
-  padding: 0.1em 0.1em 0;
+  display: inline-flex;
+  font-size: 1em;
+  font-weight: bold;
+  line-height: 1;
   position: relative;
 }
 
@@ -20,32 +22,53 @@
 }
 
 .spui-Checkbox-icon {
+  align-items: center;
   border: solid 1px var(--color-border-medium-emphasis);
   border-radius: 4px;
   box-sizing: border-box;
-  display: inline-block;
-  height: 1.25em;
-  margin-right: 8px;
-  vertical-align: -0.25em;
-  width: 1.25em;
+  color: transparent;
+  display: inline-flex;
+  font-size: 0.875em;
+  height: 18px;
+  justify-content: center;
+  width: 18px;
 }
 
 .spui-Checkbox-input:checked + .spui-Checkbox-icon {
   background-color: var(--color-object-accent-primary);
   border: solid 1px var(--color-object-accent-primary);
+  color: var(--color-text-high-emphasis-inverse);
+}
+
+.spui-Checkbox-input:disabled + .spui-Checkbox-icon {
+  opacity: 0.3;
 }
 
 /* To add 2px space for outline */
 .spui-Checkbox-outline {
   border-radius: 2px;
   bottom: -2px;
+  height: 22px;
   left: -2px;
   position: absolute;
   right: -2px;
   top: -2px;
+  width: 22px;
 }
 
 /* box-shadow is used to apply border-radius as outline */
 .spui-Checkbox-input:focus ~ .spui-Checkbox-outline {
   box-shadow: 0 0 0 2px var(--color-focus-clarity);
+}
+
+.spui-Checkbox-text:not(:empty) {
+  margin-left: 8px;
+}
+
+.spui-Checkbox-input:checked ~ .spui-Checkbox-text {
+  color: var(--color-object-accent-primary);
+}
+
+.spui-Checkbox-input:disabled ~ .spui-Checkbox-text {
+  color: var(--color-text-disabled);
 }
