--- a/packages/spindle-ui/src/Form/InvalidMessage.css
+++ b/packages/spindle-ui/src/Form/InvalidMessage.css
@@ -15,3 +15,9 @@
 .spui-InvalidMessage[hidden] {
   display: none;
 }
+
+.spui-InvalidMessage-icon {
+  font-size: 1.33em;
+  margin-right: 0.25em;
+  vertical-align: middle;
+}
