--- a/packages/spindle-ui/src/Form/TextArea.css
+++ b/packages/spindle-ui/src/Form/TextArea.css
@@ -1,41 +1,32 @@
 /*
- * TextField
+ * TextArea
 */
-.spui-TextField {
+.spui-TextArea {
   background-color: var(--color-surface-primary);
   border: solid 1px var(--color-border-medium-emphasis);
   border-radius: 8px;
   box-sizing: border-box;
   color: var(--color-text-high-emphasis);
   font-size: 1em;
+  line-height: 1.4;
   margin: 0;
+  min-height: 92px;
   outline: none;
-  padding: 0 16px;
+  padding: 12px 16px;
   transition: box-shadow 0.3s;
   width: 100%;
 }
 
-.spui-TextField::placeholder {
+.spui-TextArea::placeholder {
   color: var(--color-text-disabled);
 }
 
-.spui-TextField:focus {
+.spui-TextArea:focus {
   border-color: var(--color-border-high-emphasis);
   box-shadow: 0 0 0 3px var(--color-focus-ambiguous);
 }
 
-.spui-TextField.is-error {
+.spui-TextArea.is-error {
   background-color: var(--color-surface-caution-light);
   border-color: var(--color-border-caution);
-}
-
-/*
- * Height (Size)
-*/
-.spui-TextField--large {
-  min-height: 48px;
-}
-
-.spui-TextField--medium {
-  min-height: 40px;
 }
