feat(spindle-ui): always display buttons center with ButtonLayout

--- a/packages/spindle-ui/src/ButtonLayout/ButtonLayout.css
+++ b/packages/spindle-ui/src/ButtonLayout/ButtonLayout.css
@@ -2,7 +2,9 @@
  * Button Layout
 */
 .spui-ButtonLayout {
+  align-items: center;
   display: flex;
+  justify-content: center;
 }
 
 /* Direction */
