--- a/packages/spindle-ui/src/Button/Button.css
+++ b/packages/spindle-ui/src/Button/Button.css
@@ -5,9 +5,12 @@
  * as it is sometimes different from app's color set.
 */
 .spui-Button {
+  align-items: center;
   box-sizing: border-box;
+  display: inline-flex;
   font-family: inherit;
   font-weight: bold;
+  justify-content: center;
   line-height: 1.3;
   outline: none;
   -webkit-tap-highlight-color: var(--Button-tapHighlightColor, --gray-5-alpha);
@@ -182,4 +185,27 @@
       var(--caution-red-5-alpha)
     );
   }
+}
+
+/*
+ * with Icon
+*/
+
+.spui-Button-icon {
+  line-height: 0; /* Fix Icon position align */
+}
+
+.spui-Button-icon--large {
+  font-size: 1.375em; /* Icon 22px / Text 16px = 1.375 */
+  margin-right: 6px;
+}
+
+.spui-Button-icon--medium {
+  font-size: 1.429em; /* Icon 20px / Text 14px =  1.42857142857 */
+  margin-right: 4px;
+}
+
+.spui-Button-icon--small {
+  font-size: 1.23em; /* Icon 16px / Text 13px = 1.23076923077 */
+  margin-right: 2px;
 }
