--- a/packages/spindle-ui/src/IconButton/IconButton.css
+++ b/packages/spindle-ui/src/IconButton/IconButton.css
@@ -16,9 +16,14 @@
   opacity: 0.3;
 }
 
-.spui-IconButton:focus {
+.spui-IconButton:focus,
+.spui-IconButton:focus-visible {
   box-shadow: 0 0 0 1px var(--color-surface-primary),
     0 0 0 3px var(--color-focus-clarity);
+}
+
+.spui-IconButton:focus:not(:focus-visible) {
+  box-shadow: none;
 }
 
 /*
@@ -71,6 +76,25 @@
 
 .spui-IconButton--outlined:not([disabled]):hover {
   background-color: var(--primary-green-5);
+}
+
+/* lighted */
+.spui-IconButton--lighted {
+  background-color: var(--color-surface-accent-primary-light);
+  border: none;
+  color: var(--color-text-accent-primary);
+  padding-bottom: 8px;
+  padding-top: 8px;
+}
+
+.spui-IconButton--lighted:active {
+  background-color: var(--primary-green-10);
+}
+
+@media (hover: hover) {
+  .spui-IconButton--lighted:not([disabled]):hover {
+    background-color: var(--primary-green-10);
+  }
 }
 
 /* neutral */
