--- a/packages/spindle-ui/src/Button/Button.css
+++ b/packages/spindle-ui/src/Button/Button.css
@@ -98,7 +98,7 @@
 
 /* outlined */
 .spui-Button--outlined {
-  background-color: var(--color-text-high-emphasis-inverse);
+  background-color: transparent;
   border: 2px solid var(--color-surface-accent-primary);
   color: var(--color-surface-accent-primary);
   padding-bottom: 6px;
@@ -136,8 +136,7 @@
 
 /* danger */
 .spui-Button--danger {
-  background-color: var(--color-text-high-emphasis-inverse);
-
+  background-color: transparent;
   border: 2px solid var(--color-text-caution);
   color: var(--color-text-caution);
   padding-bottom: 6px;
