--- a/packages/spindle-ui/src/Button/Button.css
+++ b/packages/spindle-ui/src/Button/Button.css
@@ -9,6 +9,7 @@
   font-weight: bold;
   justify-content: center;
   line-height: 1.3;
+  margin: 0;
   outline: none;
   -webkit-tap-highlight-color: var(--gray-5-alpha);
   text-align: center;
