--- a/packages/spindle-ui/src/Form/DropDown.css
+++ b/packages/spindle-ui/src/Form/DropDown.css
@@ -14,6 +14,7 @@
   -webkit-appearance: listitem; /* To apply layout (font size, padding etc) to <select> in WebKit */
   box-sizing: border-box;
   font-size: 1em;
+  margin: 0;
   min-height: 40px;
   opacity: 0;
   outline: none;
