--- a/packages/spindle-ui/src/IconButton/IconButton.css
+++ b/packages/spindle-ui/src/IconButton/IconButton.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   display: inline-flex;
   justify-content: center;
+  margin: 0;
   outline: none;
   -webkit-tap-highlight-color: var(--gray-5-alpha);
   text-align: center;
