--- a/packages/spindle-ui/src/Form/TextField.css
+++ b/packages/spindle-ui/src/Form/TextField.css
@@ -19,8 +19,7 @@
   color: var(--color-text-disabled);
 }
 
-.spui-TextField:focus,
-.spui-TextField:focus-visible {
+.spui-TextField:focus {
   border-color: var(--color-border-high-emphasis);
   box-shadow: 0 0 0 3px var(--color-focus-ambiguous);
 }
