--- a/packages/spindle-ui/src/Button/Button.css
+++ b/packages/spindle-ui/src/Button/Button.css
@@ -45,7 +45,6 @@
   justify-content: center;
   line-height: 1.3;
   margin: 0;
-  outline: none;
   -webkit-tap-highlight-color: var(--Button-tapHighlightColor);
   text-align: center;
   transition: background-color 0.3s;
@@ -55,9 +54,9 @@
   opacity: 0.3;
 }
 
-.spui-Button:focus,
-.spui-Button:focus-visible {
+.spui-Button:focus {
   box-shadow: var(--Button-onFocus-boxShadow);
+  outline: none;
 }
 
 .spui-Button:focus:not(:focus-visible) {
