--- a/packages/spindle-ui/src/Form/Radio.css
+++ b/packages/spindle-ui/src/Form/Radio.css
@@ -58,8 +58,7 @@
 }
 
 /* box-shadow is used to apply border-radius as outline */
-.spui-Radio-input:focus ~ .spui-Radio-outline,
-.spui-Radio-input:focus-visible ~ .spui-Radio-outline {
+.spui-Radio-input:focus ~ .spui-Radio-outline {
   box-shadow: 0 0 0 2px var(--color-focus-clarity);
 }
 
