--- a/packages/spindle-ui/src/Form/ToggleSwitch.css
+++ b/packages/spindle-ui/src/Form/ToggleSwitch.css
@@ -73,8 +73,7 @@
 }
 
 /* box-shadow is used to apply border-radius as outline */
-.spui-ToggleSwitch-input:focus ~ .spui-ToggleSwitch-outline,
-.spui-ToggleSwitch-input:focus-visible ~ .spui-ToggleSwitch-outline {
+.spui-ToggleSwitch-input:focus ~ .spui-ToggleSwitch-outline {
   box-shadow: 0 0 0 2px var(--color-focus-clarity);
 }
 
