--- a/packages/spindle-highlightjs-styles/spindle-dark.css
+++ b/packages/spindle-highlightjs-styles/spindle-dark.css
@@ -54,8 +54,8 @@
 }
 
 .hljs {
-  background: #08121a;
-  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.05) 100%), linear-gradient(90deg, #08121a 0%, #08121a 100%);
+  /* This layer structure is defined in Spindle */
+  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.05) 100%), linear-gradient(90deg, #141e25 0%, #141e25 100%);
   color: rgba(255, 255, 255, 0.8);
   display: block;
   overflow-x: auto;
