--- a/packages/spindle-highlightjs-styles/spindle-light.css
+++ b/packages/spindle-highlightjs-styles/spindle-light.css
@@ -54,7 +54,8 @@
 }
 
 .hljs {
-  background-color: #f5f6f6;
+  /* This layer structure is defined in Spindle */
+  background-image: linear-gradient(90deg, rgba(8, 18, 26, 0.04) 0%, rgba(8, 18, 26, 0.04) 100%), linear-gradient(90deg, #fff 0%, #fff 100%);
   color: rgba(8, 18, 26, 0.74);
   display: block;
   overflow-x: auto;
