--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -5,3 +5,4 @@
 @import './Form/index.css';
 @import './IconButton/IconButton.css';
 @import './LinkButton/LinkButton.css';
+@import './Toast/Toast.css';
