fix(spindle-ui): fix to use `prefers-reduced-motion` in `<TextArea />`

--- a/packages/spindle-ui/src/Form/TextArea.css
+++ b/packages/spindle-ui/src/Form/TextArea.css
@@ -17,6 +17,12 @@
   width: 100%;
 }
 
+@media (prefers-reduced-motion: reduce) {
+  .spui-TextArea {
+    transition: box-shadow 0.1ms;
+  }
+}
+
 .spui-TextArea::placeholder {
   color: var(--color-text-disabled);
 }
