fix(spindle-ui): remove transition effect

--- a/packages/spindle-ui/src/LinkButton/LinkButton.css
+++ b/packages/spindle-ui/src/LinkButton/LinkButton.css
@@ -138,6 +138,7 @@
   color: var(--LinkButton--outlined-color);
   padding-bottom: 6px;
   padding-top: 6px;
+  transition: none;
 }
 
 .spui-LinkButton--outlined:active {
