fix(spindle-ui): fix HeroCarousel image size

--- a/packages/spindle-ui/src/HeroCarousel/HeroCarouselItem.css
+++ b/packages/spindle-ui/src/HeroCarousel/HeroCarouselItem.css
@@ -44,6 +44,8 @@
 
 .spui-HeroCarouselItem-image {
   height: 100%;
+  object-fit: cover;
+  width: 100%;
 }
 
 .spui-HeroCarouselItem-titleContainer {
