feat(spindle-ui): implement exmerimental Dialog

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -3,6 +3,7 @@
 @import './Breadcrumb/Breadcrumb.css';
 @import './Button/Button.css';
 @import './ButtonGroup/ButtonGroup.css';
+@import './Dialog/Dialog.css';
 @import './Form/index.css';
 @import './HeroCarousel/HeroCarousel.css';
 @import './IconButton/IconButton.css';
