feat(spindle-ui): implement experimental Modal

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -7,4 +7,5 @@
 @import './HeroCarousel/HeroCarousel.css';
 @import './IconButton/IconButton.css';
 @import './LinkButton/LinkButton.css';
+@import './Modal/Modal.css';
 @import './Toast/Toast.css';
