feat(spindle-ui): add option to disable underline to TextLink

--- a/packages/spindle-ui/src/TextLink/TextLink.css
+++ b/packages/spindle-ui/src/TextLink/TextLink.css
@@ -21,6 +21,7 @@
   -webkit-tap-highlight-color: var(--TextLink-tapHighlightColor);
 }
 
+.spui-TextLink--disableUnderline,
 .spui-TextLink--hasIcon {
   text-decoration: none;
 }
