style(spindle-ui): set outline offset

--- a/packages/spindle-ui/src/Dialog/Dialog.css
+++ b/packages/spindle-ui/src/Dialog/Dialog.css
@@ -70,7 +70,7 @@ html.spui-Dialog--open {
  * - Safari does not support radius outline
 */
 .spui-Dialog :is(.spui-Button, .spui-LinkButton, .spui-SubtleButton):focus {
-  box-shadow: 0 0 0 1px var(--color-surface-secondary),
+  box-shadow: 0 0 0 1px var(--color-surface-primary),
     0 0 0 3px var(--color-focus-clarity);
   outline: none;
 }
