feat(spindle-ui): create BottomButton

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -1,6 +1,7 @@
 /* stylelint-disable plugin/selector-bem-pattern */
 @import 'ameba-color-palette.css';
 @import './Breadcrumb/Breadcrumb.css';
+@import './BottomButton/BottomButton.css';
 @import './Button/Button.css';
 @import './ButtonGroup/ButtonGroup.css';
 @import './Dialog/Dialog.css';
