fix(spindle-ui): tweak style

--- a/packages/spindle-ui/src/BottomButton/BottomButton.css
+++ b/packages/spindle-ui/src/BottomButton/BottomButton.css
@@ -9,6 +9,7 @@
 .spui-BottomButton {
   background: var(--BottomButton-backgroundColor);
   bottom: 0;
+  left: 0;
   z-index: var(--BottomButton-z-index);
 }
 
