feat(spindle-ui): add InlineNotification component
Co-authored-by: shoma3571 <sho1228.k@gmail.com>

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -18,3 +18,4 @@
 @import './List/index.css';
 @import './DropdownMenu/DropdownMenu.css';
 @import './Pagination/Pagination.css';
+@import './InlineNotification/InlineNotification.css';
