fix(spindle-ui): remove underline when no href

--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.css
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.css
@@ -82,7 +82,7 @@
   text-decoration: underline;
 }
 
-.spui-Breadcrumb a[aria-current]:hover {
+.spui-Breadcrumb a:not([href]):hover {
   text-decoration: none;
 }
 
