--- a/packages/spindle-ui/src/Form/TextArea.css
+++ b/packages/spindle-ui/src/Form/TextArea.css
@@ -13,7 +13,8 @@
   min-height: 92px;
   outline: none;
   padding: 12px 16px;
-  transition: box-shadow 0.3s;
+  transition: box-shadow var(--animation-content-change-duration)
+    var(--animation-content-change-easing);
   width: 100%;
 }
 
