feat(spindle-ui): create SegmentedControl component

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -19,3 +19,4 @@
 @import './DropdownMenu/DropdownMenu.css';
 @import './Pagination/Pagination.css';
 @import './InlineNotification/InlineNotification.css';
+@import './SegmentedControl/SegmentedControl.css';
