style(spindle-ui): exec prettier

--- a/packages/spindle-ui/src/Dialog/Dialog.css
+++ b/packages/spindle-ui/src/Dialog/Dialog.css
@@ -70,13 +70,16 @@ html.spui-Dialog--open {
  * - Safari does not support radius outline
 */
 .spui-Dialog :is(.spui-Button, .spui-LinkButton, .spui-SubtleButton):focus {
-  box-shadow: 0 0 0 1px var(--color-surface-primary),
+  box-shadow:
+    0 0 0 1px var(--color-surface-primary),
     0 0 0 3px var(--color-focus-clarity);
   outline: none;
 }
 
 .spui-Dialog
-  :is(.spui-Button, .spui-LinkButton, .spui-SubtleButton):focus:not(:focus-visible) {
+  :is(.spui-Button, .spui-LinkButton, .spui-SubtleButton):focus:not(
+    :focus-visible
+  ) {
   box-shadow: none;
 }
 
